[project]
name = "pykotlin"
version = "0.1.0"
description = "Bridging Python and Kotlin type systems for improved interoperability and readability."
authors = [{ name = "Matt" }]
requires-python = ">=3.10"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["test"]

[tool.setuptools.package-data]
pykotlin = ["py.typed", "*.pyi"]

[tool.ruff.lint]
ignore = ['E701', 'F821']

[tool.pyrefly]
project-includes = ["src"]
search-path = ["src", "test", "typings"]
